@@ -1,5 +1,5 @@
 /* XPM */
-static const char * rdadmin_16x16_xpm[] = {
+static const char * rdadminb_16x16_xpm[] = {
 "16 16 103 2",
 "  	c None",
 ". 	c #0F8F34",
