@@ -1,5 +1,5 @@
 /* XPM */
-static const char * rdlibrary_16x16_xpm[] = {
+static const char * rdlibraryb_16x16_xpm[] = {
 "16 16 70 1",
 " 	c None",
 ".	c #0F8F34",
