@@ -34,7 +34,7 @@
 #include "playerfactory.h"
 #include "rdlibraryb.h"
 
-#include "../../icons/rdlibrary-16x16.xpm"
+#include "../../icons/rdlibraryb-16x16.xpm"
 
 MainWidget::MainWidget(QWidget *parent)
   :QMainWindow(parent)
@@ -77,7 +77,7 @@ MainWidget::MainWidget(QWidget *parent)
   // Window Title Bar
   //
   setWindowTitle(tr("RDLibrary Browser"));
-  setWindowIcon(QPixmap(rdlibrary_16x16_xpm));
+  setWindowIcon(QPixmap(rdlibraryb_16x16_xpm));
 
   //
   // Fix the Window Size
